package main;

public class RegularUser extends User {

    public RegularUser(String userName, String password) {
        super(userName, password);
    }

}
